# ZeroCopy

./: .gitignore  README.md  init  pyproject.toml
frontend/: index.html  package.json  tailwind.config.cjs  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: segment.ps1
src/zerocopy/: __init__.py  chunker.py  config.py  encoder.py  logging.py  manifest.py  models.py  search.py  services.py
src/zerocopy/api/: __init__.py  deps.py  main.py
src/zerocopy/index/: __init__.py  faiss_store.py
src/zerocopy/io/: __init__.py  chunker.py  db.py
src/zerocopy/models/: __init__.py  videomae_encoder.py
tests/: test_api_deps.py  test_api_main.py  test_faiss_store.py  test_io_chunker.py  test_io_db.py  test_manifest.py  test_search.py  test_services.py  test_videomae_encoder.py
